labs/May6/proyecto-final/namespaces.yaml
# ――― Namespaces ―――
apiVersion: v1
kind: Namespace
metadata:
  name: public
---
apiVersion: v1
kind: Namespace
metadata:
  name: private
