labs/May6/proyecto-final/deployment-public-api.yaml
# deployment-public-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-public-api
  namespace: public
spec:
  replicas: 2
  selector:
    matchLabels:
      app: public-api
  template:
    metadata:
      labels:
        app: public-api
    spec:
      containers:
      - name: public-api
        image: cachac/kubelabs_public_api:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        - containerPort: 3080
          name: healthcheck
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 3080
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 3080
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
        volumeMounts:
        - name: logs
          mountPath: /app/logs
      volumes:
      - name: logs
        persistentVolumeClaim:
          claimName: pvc-public-api
