labs/May6/proyecto-final/service-webpage.yaml
# service-webpage.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-webpage
  namespace: public
spec:
  selector:
    app: webpage
  ports:
  - port: 80
    targetPort: 8080
