labs/May6/proyecto-final/ingress-public-api.yaml
# ingress-public-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-public-api
  namespace: public
spec:
  rules:
  - host: api.fercanales.kubelabs.dev
    http:
      paths:
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: svc-public-api
            port:
              number: 3000
