labs/May6/proyecto-final/ingress-webpage.yaml
# ingress-webpage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-webpage
  namespace: public
spec:
  rules:
  - host: fercanales.kubelabs.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-webpage
            port:
              number: 80
