labs/May6/proyecto-final/ingress-websocket.yaml
# ingress-websocket.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-websocket
  namespace: public
spec:
  rules:
  - host: websocket.fercanales.kubelabs.dev
    http:
      paths:
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: svc-websocket
            port:
              number: 3001
